fixed bg image alignment

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -1,6 +1,6 @@
 body {
     background-image: url('/images/pattern.png');
-    background-position: center; 
+    background-position: center top; 
 }
 .quote {
   margin-top: 10em;
